--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <div class="wino-title"><b>CZERWONA PORZECZKA</b></div>
                             <div class="wino-content">
                                 <p>półsłodka, 9,5 % alk.</p>
-                                <p>Dojrzewająca w słońcu czerwona porzeczka od lokalnych rolników. Jej słodycz oraz kwasowość tworzą idealne połączenie. Wino swój niepowtarzalny</p>
+                                <p>Dojrzewająca w słońcu czerwona porzeczka od lokalnych rolników. Jej słodycz oraz kwasowość tworzą idealne połączenie.</p>
                                 <p>Polecamy pić schłodzone lub na lodzie</p>
                             </div>
                         </div>
